# SnowVision1.0

./: CMakeLists.txt  README.md  main.cpp  plot.cpp
include/: matched_position.h  matched_position.h~  matching_score.h  readEdges.h
src/: readEdges.cpp
