cmake_minimum_required(VERSION 2.8)
add_definitions("-std=c++0x")
project( readdis )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include )
add_library( readEdge ${PROJECT_SOURCE_DIR}/src/readEdges.cpp )
add_executable( test main.cpp )
target_link_libraries( test ${OpenCV_LIBS} readEdge )
